--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -35,6 +35,7 @@ font-family: 'Permanent Marker', cursive;
 .topnav {
   overflow: hidden;
   background-color: #333;
+  margin-bottom: 10px;
 }
 
 /* Style the topnav links */
