--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -70,6 +70,26 @@ font-family: 'Permanent Marker', cursive;
     font-size: 30px;
 }
 
+#picture {
+    text-align: center;
+}
+
+#picture p{
+  font-size: 35px;
+  font-family: 'Mansalva', cursive;
+  background-color: black;
+  color: white;
+  text-align: center;
+  margin-left: 100px;
+  margin-right: 100px;
+  border-color: red;
+  border-radius: 50%;
+}
+#picture img{
+  width: 350px;
+  height: auto;
+}
+
 
 /*Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other
 */
