--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -54,6 +54,24 @@ font-family: 'Permanent Marker', cursive;
 }
 
 
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr {
+  background-color: black;
+}
+
+
+
 /* Footer */
 .footer {
   padding: 30px;
