--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -74,7 +74,7 @@ font-family: 'Permanent Marker', cursive;
     text-align: center;
 }
 
-#picture p{
+#picture h1{
   font-size: 35px;
   font-family: 'Mansalva', cursive;
   background-color: black;
@@ -84,6 +84,15 @@ font-family: 'Permanent Marker', cursive;
   margin-right: 100px;
   border-color: red;
   border-radius: 50%;
+}
+#picture p{
+  font-size: 15px;
+  background-color: black;
+  color: white;
+  margin-left: 400px;
+  margin-right: 400px;
+  border-radius: 50%;
+
 }
 #picture img{
   width: 350px;
