--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -2,143 +2,118 @@
 @import url('https://fonts.googleapis.com/css?family=Mansalva&display=swap');
 
 body {
-  font-family: Arial;
-  background-image: url(img/background.jpg);
-  background-attachment:fixed;
-  background-size: cover;
-  margin: auto;
+	font-family: Arial;
+	background-size: cover;
+  	margin: 20px 200px 20px 200px;
+	padding: 2px;
+	background-color: lightblue;
 }
 
 /* Header/Blog Title */
-.header {
-  padding: 10px;
-  text-align: center;
-  background: black;
+#logo-left{
+	float: left;
+	padding-left: 40px;
 }
-
-.header h1 {
-
-  font-family: 'Mansalva', cursive;
-  font-size: 50px;
-  color: white;
+#logo-right{
+	float: right;
+	padding-right: 40px;
 }
-
+.clearfix{overflow: auto;}
+.header {  
+  	text-align: center;
+	background-color: white;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+.header h2 {
+	font-family: 'Mansalva', cursive;
+  	font-size: 50px;
+  	color: black;
+}
 .header p {
-
-font-family: 'Permanent Marker', cursive;
-  font-size: 30px;
-  color: white;
+	font-family: 'Permanent Marker', cursive;
+  	font-size: 30px;
+  	color: black;
 }
+/* Header/Blog Title */
 
+/*Slider*/
+#carouselExampleIndicators{text-align: center;}
+#slider{
+	background-color: white;
+}
+/*Slider*/
 
-/* Style the top navigation bar */
-.topnav {
+/*Navbar*/
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
-  background-color: #333;
-  margin-bottom: 10px;
+  background-color: black;
 }
-
-/* Style the topnav links */
-.topnav a {
-  float: left;
+nav li {
+    float: left;
+    padding: 10px;
+}
+nav li a {
   display: block;
-  color: #f2f2f2;
+  color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 10px;
   text-decoration: none;
 }
+/*Navbar*/
 
-.tabel {
-  padding-left: 500px;
+/*Main*/
+.main {
+	background-color: dimgrey;
+	padding: 50px 20px 50px 20px;
 }
-
-
-/* Change color on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+.main img{
+	height: 128px;
+	width: auto;
 }
+/*Main*/
 
-
-th, td {
-border: 1px solid black;
+/*motorbikes*/
+#motorbikes{
+	padding-top: 20px;
+	display: flex;
+  	align-items: center;
+  	justify-content: center;
+}
+#motorbikes img{
+	width: 450px;
+	height: auto;
 }
 table {
-border-collapse: collapse;
+  	font-family: arial, sans-serif;
+  	border-collapse: collapse;
+  	width: 50%;
+	border: 2px solid black;
+}
+td, th {
+  text-align: center;
 }
 tr:nth-child(even) {
-background-color: grey;
+  background-color: beige;
 }
-tr:nth-child(odd){
-background-color: white;
-}
-
-
+/*motorbikes*/
 
 /* Footer */
 .footer {
-  padding: 30px;
-  text-align: center;
-  background: black;
-  margin-top: 750px;
+  	padding: inherit;
+  	text-align: center;
+  	background: black;
 }
-
 .footer h2{
 
     font-family: 'Permanent Marker', cursive;
     color: white;
     font-size: 30px;
 }
-
-#picture h2{
-    padding-top: 20px;
-    text-align: center;
+.footer p {
+	color: white;
 }
-
-
-#picture h1{
-
-  /*font-size: 35px;*/
-  font-family: 'Mansalva', cursive;
-  /*
-  background-color: black;
-  color: white;
-  text-align: center;
-  margin-left: 100px;
-  margin-right: 100px;
-  border-color: red;
-  border-radius: 50%;
-  */
-  padding-left: 450px;
-}
-#picture p{
-  font-size: 15px;
-  background-color: black;
-  color: white;
-  margin-left: 400px;
-  margin-right: 400px;
-  border-radius: 50%;
-  padding-left: 175px;
-
-}
-#picture img{
-  width: 350px;
-  padding-left: 450px;
-  height: auto;
-=======
-#picture table tr p{
-    text-align: center;
-    color: black;
->>>>>>> 9e20ca0d2e09aa36833ac6438127b6059919b5ae
-}
-
-#picture table {
-    width: 400px;
-    height: auto;
-    text-align: center;
-}
-
-#picture table tr img{
-  width: 350px;
-  height: auto;
-}
+/* Footer */
