--- a/Tuning/css/indexstyle.css
+++ b/Tuning/css/indexstyle.css
@@ -4,9 +4,8 @@
 body {
     font-family: Arial;
     background-size: cover;
-    margin: 20px 167px 20px 150px;
-    padding: 2px;
-    background-image: url("../../img/background.jpg");/..
+    margin: 20px 150px 20px 150px;
+    background-color: lightblue;
 }
 
 /* Header/Blog Title */
@@ -37,13 +36,6 @@ body {
 }
 /* Header/Blog Title */
 
-/*Slider*/
-#carouselExampleIndicators{text-align: center;}
-#slider{
-    background-color: white;
-}
-/*Slider*/
-
 /*Navbar*/
 nav ul {
     list-style-type: none;
@@ -65,48 +57,7 @@ nav li a {
 }
 /*Navbar*/
 
-
-/*droplist*/
-.column {
-    float: left;
-    padding: 15px;
-}
-
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-.menu {
-    width: 25%;
-}
-
-.content {
-    width: 75%;
-}
-
-.menu ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.menu li {
-    padding: 8px;
-    margin-bottom: 8px;
-    background-color: #33b5e5;
-    color: #ffffff;
-}
-
-.menu li:hover {
-    background-color: #0099cc;
-}
-/*droplist*/
-
 /*Main*/
-.main{
-}
 /*Main*/
 
 /* Footer */
