--- a/css/historystyle.css
+++ b/css/historystyle.css
@@ -4,7 +4,7 @@
 body {
 	font-family: Arial;
 	background-size: cover;
-  	margin: 20px 150px 20px 150px;
+  	margin: 20px 200px 20px 200px;
 	background-color: lightblue;
 }
 
@@ -18,21 +18,25 @@ body {
 	padding-right: 40px;
 }
 .clearfix{overflow: auto;}
-.header {
-	text-align: center;
+.header {  
+  	text-align: center;
 	background-color: white;
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
 .header h2 {
 	font-family: 'Mansalva', cursive;
-	font-size: 50px;
-	color: black;
+  	font-size: 50px;
+  	color: black;
 }
 .header p {
 	font-family: 'Permanent Marker', cursive;
-	font-size: 30px;
-	color: black;
+  	font-size: 30px;
+  	color: black;
+}
+.header img{
+	width: 200px;
+	height: auto;
 }
 /* Header/Blog Title */
 
@@ -62,9 +66,9 @@ nav li a {
 #slider{
 	background-color: white;
 }
-#slider img{
-	width: 600px;
+#slider img {
 	height: 400px;
+	width: auto;
 }
 /*Slider*/
 
